Implement HTTP API for hostname
