# openapi.yaml
@@ -78,6 +78,11 @@ components:
                 type: string
               value:
                 type: string
+    hostnameInfo:
+      type: object
+      properties:
+        hostname:
+          type: string
     memoryStressSession:
       type: object
       properties:
@@ -138,6 +143,18 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/interface'
+  /hostname:
+      get:
+        tags:
+          - environment
+        summary: Returns the machine's hostname
+        responses:
+          '200':
+            description: A JSON object describing the machine's hostname
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/interface'
   /memory/stresssession:
     get:
       tags:
